[gd_scene load_steps=6 format=3 uid="uid://0s1oblrv5a3d"]

[ext_resource type="PackedScene" uid="uid://w3ipc7py6m28" path="res://hud.tscn" id="1_csr0u"]
[ext_resource type="PackedScene" uid="uid://c8gyb4e3qyktp" path="res://Classes/Player/player.tscn" id="2_hynuw"]
[ext_resource type="PackedScene" uid="uid://ue62rlumwdxh" path="res://Classes/Props/exit_door.tscn" id="3_hynuw"]
[ext_resource type="Script" uid="uid://drp8lg2g2es0j" path="res://Classes/Dungeon/dungeon_manager.gd" id="3_ikttj"]
[ext_resource type="Script" uid="uid://dstrth0j5pbm" path="res://Classes/Components/transition_component.gd" id="5_ikttj"]

[node name="dungeon_scene" type="Node2D"]

[node name="HUD" parent="." instance=ExtResource("1_csr0u")]

[node name="title_label" parent="HUD/inGameUi/mainUi/MarginContainer/title" index="0"]
text = "dungeon : level "

[node name="fps_label" parent="HUD/inGameUi/mainUi/MarginContainer/fps" index="0"]
offset_top = -7.0
offset_bottom = 16.0

[node name="player" parent="." instance=ExtResource("2_hynuw")]
z_index = 1

[node name="exit_door" parent="." instance=ExtResource("3_hynuw")]

[node name="game_manager" type="Node" parent="." node_paths=PackedStringArray("exit_door")]
script = ExtResource("3_ikttj")
floor_enemy_counts = {
0: 1,
4: 3,
6: 5
}
exit_door = NodePath("../exit_door")

[node name="transition_component" type="Node" parent="game_manager"]
script = ExtResource("5_ikttj")
metadata/_custom_type_script = "uid://dstrth0j5pbm"

[connection signal="current_state_finished" from="game_manager" to="game_manager/transition_component" method="await_transition"]
[connection signal="floor_level_changed" from="game_manager" to="HUD/inGameUi/mainUi/MarginContainer/title" method="update_floor_title"]
[connection signal="transition_end" from="game_manager/transition_component" to="game_manager" method="set_new_stage"]

[editable path="HUD"]
